Fix: gaps between cards

--- a/styles/assignment_one.css
+++ b/styles/assignment_one.css
@@ -1,7 +1,8 @@
-ol, ul {
-    display: inline-flex;
+.card-container {
+    display: flex;
     flex-wrap: wrap;
-    gap: 10px
+    justify-content: space-between;
+    row-gap: 20px;
 }
 
 @media (width < 768px) {
@@ -12,7 +13,7 @@ ol, ul {
 
 @media (1200px > width > 768px) {
     .card {
-        width: 50%;
+        width: 49%;
     }
     .card:last-child {
         width: 100%
@@ -21,6 +22,6 @@ ol, ul {
 
 @media (width > 1200px) {
     .card {
-        width: 33%;
+        width: 32%;
     }
 }
